6_Services-and-Networking/service-clusterip-definition.yaml
# ip to use inside to communicate layers ex: frontend with backend
apiVersion: v1
kind: Service
metadata:
  name: back-end-service
spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80

  selector:
    app: myapp
    type: back-end  # should match with labels on pod
