6_Services-and-Networking/service-nodeport-definition.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: NodePort
  ports:
    - port: 80  # service port
      targetPort: 80  # pod port
      nodePort: 30004 # external port
  selector:
    app: myapp  # should match with labels on pod
